Changelog Notes:
Adjusted Hardy regeneration rate.
Added Sandbox Options for:
-Hardy Regeneration Rate
-Pack Mule Weight Change
-Pack Mouse Weight Change
-Default Weight Change
-Global Weight Modifier.
Gordanite now scales off Long Blunt and is now less OP at lower levels.
Added Sandbox Options for:
-Gymgoer
-Superimmune
-Grave Robber
-Indefatigable