@@ -34,4 +34,6 @@ Sandbox_EN = {
     Sandbox_MoreTraits_GraveRobberGuaranteedLoot_tooltip = "How much guaranteed extra loot will Grave Robber's find on zombie corpses?<br>By default, a random value is determined. Increasing this value guarantees extra loot whenever loot is rolled.",
     Sandbox_MoreTraits_IndefatigableRecharge = "Indefatigable Recharge",
     Sandbox_MoreTraits_IndefatigableRecharge_tooltip = "After how many in-game days should the indefatigable ability recharge?",
+    Sandbox_MoreTraits_GordaniteEffectiveness = "Gordanite Effectiveness",
+    Sandbox_MoreTraits_GordaniteEffectiveness_tooltip = "A percent value representing how effective the Gordanite trait makes players with Crowbars.<br>Setting this to 200% will make Gordanite twice as powerful.",
 }
