@@ -6,9 +6,10 @@ Added Sandbox Options for:
 -Pack Mouse Weight Change
 -Default Weight Change
 -Global Weight Modifier.
-Gordanite now scales off Long Blunt and is now less OP at lower levels.
-Added Sandbox Options for:
 -Gymgoer
 -Superimmune
 -Grave Robber
 -Indefatigable
+-Gordanite
+Gordanite now scales off Long Blunt and is now less OP at lower levels.
+Fixed Localization Bug in Gordanite.
